--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = lauterbach-trace32-pystart
 version = attr: lauterbach.trace32.pystart.__version__
-description = A short description of pystart
+description = start Lauterbach TRACE32
 long_description = file: README.md
-long_description_content_type="text/markdown"
+long_description_content_type=text/markdown
 url = https://www.lauterbach.com
 author = Lauterbach GmbH
 author_email = support@lauterbach.com
@@ -18,6 +18,8 @@ classifiers =
     Operating System :: OS Independent
     Topic :: Software Development :: Debuggers
     Intended Audience :: Developers
+project_urls =
+    Documentation = https://support.lauterbach.com/news/posts/python-library-in-place-of-trace32-config-files
 
 [options]
 packages = find_namespace:
