add repository url

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ classifiers =
     Intended Audience :: Developers
 project_urls =
     Documentation = https://support.lauterbach.com/news/posts/python-library-in-place-of-trace32-config-files
+    Repository = https://gitlab.com/lauterbach/pystart
 
 [options]
 packages = find_namespace:
