docs: add url to readthedocs.io page

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ classifiers =
     Topic :: Software Development :: Debuggers
     Intended Audience :: Developers
 project_urls =
-    Documentation = https://support.lauterbach.com/news/posts/python-library-in-place-of-trace32-config-files
+    Documentation = https://lauterbach-trace32-pystart.readthedocs.io
     Repository = https://gitlab.com/lauterbach/pystart
 
 [options]
